src/components/Navbar.css
/* src/components/Navbar.css */
.navbar {
  background: var(--dark-gray);
  height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 50px;
  font-size: 1.2rem;
}

.navbar-logo img {
  height: 80px;
}

.navbar-logo {
  color: var(--primary-color);
  text-decoration: none;
  font-size: 2.5rem;
  font-weight: bold;
  text-shadow: -1px -1px 0 var(--secondary-color), 1px -1px 0 var(--secondary-color), -1px 1px 0 var(--secondary-color), 1px 1px 0 var(--secondary-color);
}

.nav-menu {
  display: flex;
  list-style: none;
  text-align: center;
}

.nav-item {
  height: 80px;
}

.nav-link {
  color: var(--white);
  text-decoration: none;
  padding: 0.5rem 1rem;
  height: 100%;
  display: flex;
  align-items: center;
  transition: all 0.2s ease-out;
}

.nav-link:hover {
  background-color: var(--dark-gray);
  border-radius: 4px;
}

.logout-button {
  background: transparent;
  border: none;
  color: var(--danger-color);
  font-family: inherit;
  font-size: inherit;
  cursor: pointer; /* Good practice for button-like elements */
  text-shadow: -1px -1px 0 var(--white), 1px -1px 0 var(--white), -1px 1px 0 var(--white), 1px 1px 0 var(--white);
}

.login-link {
    color: var(--secondary-color);
}

@media (max-width: 768px) {
  .navbar {
    flex-direction: column;
    height: auto;
    padding: 20px;
  }

  .nav-menu {
    flex-direction: column;
    width: 100%;
    text-align: center;
  }

  .nav-item {
    width: 100%;
    height: auto;
  }

  .nav-link {
    padding: 1.5rem 1rem;
    width: 100%;
    justify-content: center;
  }
}

